    - Disabled the following plugins on kfreebsd-{i386,amd64} which have not
      yet been ported to FreeBSD: battery, conntrack, contextswitch, cpufreq,
      disk, entropy, fscache, irq, madwifi, nfs, protocols, serial, thermal,
      vmem, vserver, wireless.
    - Simplified Java archdir mapping: removed entries "pointing" to
      themselves and let those default to DEB_BUILD_ARCH.
  * debian/patches:
    - Added bts566199_collection_hide_types.dpatch -- added ability to hide
      specified types in collection.cgi; thanks to Pavel Piatruk for the patch
      (Closes: #566199).
    - Added typo_fixes.dpatch -- fixing some typos in manpages and error
      messages; thanks to lintian(1) for reporting this.
  * debian/collectd-core.overrides:
    - Replaced overrides for spelling-error-in-description with
      capitalization-error-in-description.

 -- Sebastian Harl <tokkee@debian.org>  Sun, 24 Jan 2010 14:40:32 +0100

collectd (4.8.2-1) unstable; urgency=medium

  * New upstream release:
    - Now using libtool 2.
  * Set urgency to medium because of the fix for #559801.
  * Split the "collectd" binary package into "collectd-core" and "collectd".
    The former provides the main program file and the plugins while the latter
    provides the configuration. This allows for much more flexible setups
    (e.g. providing customizations on top of "collectd-core" without modifying
    the "collectd" package) and, amongst others, removes the hard dependency
    on librrd (Closes: #495936, #544311).
  * debian/collectd-core.collectd.init.d:
    - Do not (try to) start collectd if the config file does not exist. Else,
      installation of "collectd-core" (which does not provide configuration)
      would fail.
  * debian/collectd.postinst:
    - Let the "collectd" package restart the daemon, since it provides the
      config file.
  * debian/collectd.links:
    - Symlink /u/s/d/collectd/examples to /u/s/d/collectd-core/examples.
  * debian/control: